// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropzone renders correctly with files 1`] = `
<Card
  elevation="x1"
  padding="x3"
>
  <input
    accept="image/*"
    autoComplete="off"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <Base
    backgroundColor="gray-1"
    padding="x3"
  >
    <Flex
      className="scrollable"
      direction="horizontal"
      height={400}
    >
      <div
        className="dropzone dropzoneHasFiles"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <Icon
          color="grape-3"
          name="PlusAdd"
          size="1.5rem"
        />
      </div>
      <Base
        container={true}
        key="file.png"
        paddingHorizontal="x3"
      >
        <div
          className="removeIcon"
          onClick={[Function]}
        >
          <Icon
            color="white"
            name="CloseSmall"
            size="1.5rem"
          />
        </div>
        <Base
          Component="img"
          className="thumbnail"
        />
      </Base>
    </Flex>
  </Base>
</Card>
`;

exports[`Dropzone renders correctly without files 1`] = `
<Card
  elevation="x1"
  padding="x3"
>
  <input
    accept="image/*"
    autoComplete="off"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <Base
    backgroundColor="gray-1"
    padding="x3"
  >
    <Flex
      className="scrollable"
      direction="horizontal"
      height={400}
    >
      <div
        className="dropzone"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <Flex
          alignChildrenHorizontal="middle"
          direction="vertical"
        >
          <Text
            align="middle"
            color="gray-7"
            size="x5"
            weight="medium"
          >
            Drag & Drop 
            <br />
            or
          </Text>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
          >
            <Icon
              color="grape-3"
              name="PlusAdd"
              paddingHorizontal="x1"
              size="1.5rem"
            />
            <Text
              align="middle"
              color="grape-3"
              size="x3"
              weight="medium"
            >
              Browse Files
            </Text>
          </Flex>
        </Flex>
      </div>
    </Flex>
  </Base>
</Card>
`;
